--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "express-winston": "^4.2.0",
+    "morgan": "^1.10.0",
     "mysql": "^2.18.1",
+    "swagger-ui-express": "^5.0.0",
     "twilio": "^4.21.0",
+    "winston": "^3.11.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
