--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "redis": "^4.6.13",
+    "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "twilio": "^4.21.0",
     "winston": "^3.11.0",
-    "winston-redis": "^3.1.0",
     "xlsx": "^0.18.5"
   },
   "scripts": {
