--- a/package.json
+++ b/package.json
@@ -1,10 +1,19 @@
 {
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
+    "express-validator": "^7.0.1",
     "express-winston": "^4.2.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.2.0",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
+    "passport": "^0.7.0",
+    "redis": "^4.6.13",
     "swagger-ui-express": "^5.0.0",
     "twilio": "^4.21.0",
     "winston": "^3.11.0",
